# Knowledge-Assistant

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  LANGCHAIN_IMPLEMENTATION.md  Makefile  README.md  SYSTEM_ARCHITECTURE.md  SYSTEM_ARCHITECTURE_DESIGN.md  VLLM_DEPLOYMENT.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  config.py  database.py  main.py  requirements.txt
backend/langchain_services/: __init__.py
backend/langchain_services/agents/: __init__.py  multi_hop_agent.py  query_planner_agent.py  self_consistency_agent.py
backend/langchain_services/chains/: __init__.py  rag_chain.py
backend/langchain_services/document_processing/: __init__.py  embeddings.py  loaders.py  splitters.py
backend/langchain_services/llm_providers/: __init__.py  vllm_client.py
backend/langchain_services/utils/: __init__.py  performance_monitor.py  prompt_templates.py  response_formatters.py  validation.py
backend/langchain_services/vector_stores/: __init__.py  faiss_store.py  milvus_store.py  retriever.py
backend/models/: schemas.py
backend/routers/: documents.py  health.py  queries.py
backend/services/: chunking.py  embedding.py  ingestion.py  langchain_rag_service.py  llm_orchestrator.py  query_planner.py  reranker.py  retrieval.py  vector_store.py  verification.py
backend/services/llm_providers/: mock_provider.py  ollama_provider.py  openai_provider.py
backend/tests/: test_langchain_implementation.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/overview/: page.tsx
frontend/components/: ChatInterface.tsx  DocumentManager.tsx  Header.tsx  MessageBubble.tsx  QueryHistory.tsx  ReasoningTrace.tsx  Settings.tsx  Sidebar.tsx  SourceList.tsx
frontend/context/: DocumentContext.tsx  QueryContext.tsx
frontend/lib/: api.ts
frontend/src/components/: ChatInterface.js  DocumentManager.js  Header.js  MessageBubble.js  QueryHistory.js  ReasoningTrace.js  Sidebar.js  SourceList.js
k8s/: README.md  deploy.sh
k8s/base/: kustomization-no-vllm.yaml  kustomization.yaml  namespace.yaml
k8s/base/backend/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/base/frontend/: configmap.yaml  deployment.yaml  service.yaml
k8s/base/milvus/: kustomization.yaml
k8s/base/milvus/attu/: deployment.yaml  service.yaml
k8s/base/milvus/etcd/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/milvus/milvus/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/milvus/minio/: deployment.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/base/nginx/: configmap.yaml  ingress.yaml
k8s/base/ollama/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/postgres/: deployment.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
k8s/base/redis/: deployment.yaml  pvc.yaml  service.yaml
k8s/base/vllm/: configmap.yaml  deployment-cpu.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  pvc.yaml  service.yaml  vllm-deployment-cpu.yaml  vllm-ingress.yaml
k8s/overlays/dev/: backend-deployment-patch.yaml  frontend-deployment-patch.yaml  kustomization.yaml  vllm-cpu-deployment-patch.yaml  vllm-deployment-patch.yaml
k8s/overlays/dev-no-vllm/: kustomization.yaml
k8s/overlays/prod/: backend-deployment-patch.yaml  frontend-deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml  vllm-deployment-patch.yaml
scripts/: check-ollama.sh  setup-ollama.sh
